--- a/fast_aug/Cargo.toml
+++ b/fast_aug/Cargo.toml
@@ -10,8 +10,8 @@ path = "src/lib.rs"
 [dependencies]
 rand = "0.8.5"
 regex = "1.10.2"
-unicode-segmentation = "1.10.1"
-lipsum = "0.8.0"
+unicode-segmentation = "1.10.1"  # think about moving to https://crates.io/crates/finl_unicode
+lipsum = "0.9.0"
 #pyo3 = { version = "0.20.0", features = ["extension-module"] }
 
 [dev-dependencies]
