--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,6 +26,7 @@ jobs:
           path: ~/.cargo
           key: ${{ runner.os }}-rust-${{ hashFiles('**/Cargo.toml') }}
       - name: Run tests
+        working-directory: ./fast_aug  # rust library directory
         run: cargo test
 
   benchmark-rust:
@@ -46,19 +47,20 @@ jobs:
           path: ~/.cargo
           key: ${{ runner.os }}-rust-${{ hashFiles('**/Cargo.toml') }}
       - name: Run benchmarks
-        run: cargo bench --output-format bencher  | tee benchmark.txt
+        working-directory: ./fast_aug  # rust library directory
+        run: cargo bench | tee /tmp/benchmark.txt
       - name: Download previous benchmark data
         uses: actions/cache@v1
         with:
-          path: ./cache
+          path: /tmp/cache
           key: ${{ runner.os }}-benchmark
       - name: Store benchmark result
         uses: benchmark-action/github-action-benchmark@v1
         with:
           name: Rust Benchmark
           tool: 'cargo'
-          output-file-path: benchmark.txt
-          external-data-json-path: ./cache/benchmark-data.json
+          output-file-path: /tmp/benchmark.txt
+          external-data-json-path: /tmp/cache/benchmark-data.json
           github-token: ${{ secrets.GITHUB_TOKEN }}
           # Show alert with commit comment on detecting possible performance regression
           alert-threshold: '200%'
