--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,40 +29,42 @@ jobs:
         working-directory: ./fast_aug  # rust library directory
         run: cargo test
 
-  benchmark-rust:
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest]
-#        os: [ubuntu-latest, macos-latest, windows-latest]
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v4
-      - uses: moonrepo/setup-rust@v1
-        with:
-          rust-version: stable
-          profile: minimal
-      - uses: Swatinem/rust-cache@v2
-        with:
-          path: ~/.cargo
-          key: ${{ runner.os }}-rust-${{ hashFiles('**/Cargo.toml') }}
-      - name: Run benchmarks
-        working-directory: ./fast_aug  # rust library directory
-        run: cargo bench --message-format=json | tee benchmark.json
-      - name: Download previous benchmark data
-        uses: actions/cache@v1
-        with:
-          path: /tmp/cache
-          key: ${{ runner.os }}-benchmark
-      - name: Store benchmark result
-        uses: benchmark-action/github-action-benchmark@v1
-        with:
-          name: Rust Benchmark
-          tool: 'cargo'
-          output-file-path: fast_aug/benchmark.json
-          external-data-json-path: /tmp/cache/benchmark-data.json
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          # Show alert with commit comment on detecting possible performance regression
-          alert-threshold: '200%'
-          comment-on-alert: true
-          fail-on-alert: true
+  # TODO: fix benchmark running, currently it fails with:
+  # No benchmark result was found in the ....
+#  benchmark-rust:
+#    strategy:
+#      fail-fast: false
+#      matrix:
+#        os: [ubuntu-latest]
+##        os: [ubuntu-latest, macos-latest, windows-latest]
+#    runs-on: ${{ matrix.os }}
+#    steps:
+#      - uses: actions/checkout@v4
+#      - uses: moonrepo/setup-rust@v1
+#        with:
+#          rust-version: stable
+#          profile: minimal
+#      - uses: Swatinem/rust-cache@v2
+#        with:
+#          path: ~/.cargo
+#          key: ${{ runner.os }}-rust-${{ hashFiles('**/Cargo.toml') }}
+#      - name: Run benchmarks
+#        working-directory: ./fast_aug  # rust library directory
+#        run: cargo bench | tee benchmark.json
+#      - name: Download previous benchmark data
+#        uses: actions/cache@v1
+#        with:
+#          path: /tmp/cache
+#          key: ${{ runner.os }}-benchmark
+#      - name: Store benchmark result
+#        uses: benchmark-action/github-action-benchmark@v1
+#        with:
+#          name: Rust Benchmark
+#          tool: 'cargo'
+#          output-file-path: fast_aug/benchmark.json
+#          external-data-json-path: /tmp/cache/benchmark-data.json
+#          github-token: ${{ secrets.GITHUB_TOKEN }}
+#          # Show alert with commit comment on detecting possible performance regression
+#          alert-threshold: '200%'
+#          comment-on-alert: true
+#          fail-on-alert: true
