--- a/fast_aug/Cargo.toml
+++ b/fast_aug/Cargo.toml
@@ -1,24 +1,34 @@
 [package]
 name = "fast_aug"
-version = "0.0.1"
+description = "Fast data augmentation for text"
+authors = ["Konstantin Chernyshev <kdchernyshev@gmail.com>"]
+readme = "./README.md"
+version = "0.0.2"
 edition = "2021"
+license = "MIT"
+homepage = "https://github.com/k4black/fast-aug"
+repository = "https://github.com/k4black/fast-aug"
+documentation = "https://docs.rs/fast-aug"
+
+exclude = [ "rust-toolchain", "target/*", "Cargo.lock", "benches/*.txt", "benches/*.json", "data/*" ]
+
 
 [lib]
 name = "fast_aug"
 path = "src/lib.rs"
+bench = false
 
 
 [dependencies]
+lazy_static = "1.4.0"
 rand = "0.8.5"
 regex = "1.10.2"
 unicode-segmentation = "1.10.1"  # think about moving to https://crates.io/crates/finl_unicode
-lipsum = "0.9.0"
 #pyo3 = { version = "0.20.0", features = ["extension-module"] }
 
 [dev-dependencies]
 test-case = "3.3.1"
 criterion = "0.5.1"
-#parquet = { version = "49.0.0", features = ["arrow"] }
 
 
 [[bench]]
