--- a/fast_aug/Cargo.toml
+++ b/fast_aug/Cargo.toml
@@ -22,6 +22,7 @@ bench = false
 [dependencies]
 lazy_static = "1.4.0"
 rand = "0.8.5"
+rand_distr = "0.4.3"
 regex = "1.10.2"
 unicode-segmentation = "1.10.1"  # think about moving to https://crates.io/crates/finl_unicode
 #pyo3 = { version = "0.20.0", features = ["extension-module"] }
