--- a/fast_aug/Cargo.toml
+++ b/fast_aug/Cargo.toml
@@ -20,16 +20,17 @@ bench = false
 
 
 [dependencies]
-lazy_static = "1.4.0"
-rand = "0.8.5"
-rand_distr = "0.4.3"
-regex = "1.10.2"
-unicode-segmentation = "1.10.1"  # think about moving to https://crates.io/crates/finl_unicode
-#pyo3 = { version = "0.20.0", features = ["extension-module"] }
+lazy_static = "1.4"
+rand = "0.8"
+rand_distr = "0.4"
+regex = "1.10"
+unicode-segmentation = "1.10"  # think about moving to https://crates.io/crates/finl_unicode
+#pyo3 = { version = "0.20", features = ["extension-module"] }
 
 [dev-dependencies]
-test-case = "3.3.1"
-criterion = "0.5.1"
+test-case = "3.3"
+criterion = "0.5"
+grcov = "0.8"
 
 
 [[bench]]
