--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 *.bin filter=lfs diff=lfs merge=lfs -text
+*.tar filter=lfs diff=lfs merge=lfs -text
+*.gz filter=lfs diff=lfs merge=lfs -text
 fast_aug/test_data filter=lfs diff=lfs merge=lfs -text
