--- a/fast_aug/Cargo.toml
+++ b/fast_aug/Cargo.toml
@@ -25,8 +25,17 @@ rand = "0.8"
 rand_distr = "0.4"
 regex = "1.10"
 unicode-segmentation = "1.10"  # think about moving to https://crates.io/crates/finl_unicode
-finalfusion = "0.18.0"
+finalfusion = "0.18"
+icu = "1.4"
+serde = "1.0"
+serde_json = "1.0"
+flate2 = "1.0"
 #pyo3 = { version = "0.20", features = ["extension-module"] }
+
+[build-dependencies]
+flate2 = "1.0"
+serde = "1.0"
+serde_json = "1.0"
 
 [dev-dependencies]
 test-case = "3.3"
