--- a/fast_aug/Cargo.toml
+++ b/fast_aug/Cargo.toml
@@ -26,7 +26,9 @@ rand_distr = "0.4"
 regex = "1.10"
 unicode-segmentation = "1.10"  # think about moving to https://crates.io/crates/finl_unicode
 finalfusion = "0.18"
-icu = "1.4"
+icu_locid = "1.4"
+icu_properties = "1.4"
+icu_provider = "1.4"
 serde = "1.0"
 serde_json = "1.0"
 flate2 = "1.0"
