--- a/fast_aug/Cargo.toml
+++ b/fast_aug/Cargo.toml
@@ -32,7 +32,13 @@ icu_provider = "1.4"
 serde = "1.0"
 serde_json = "1.0"
 flate2 = "1.0"
-#pyo3 = { version = "0.20", features = ["extension-module"] }
+candle-core = "0.3.2"
+half = "2.3"
+hf-hub = "0.3.0"
+#tokenizers = { version = "0.13.4", default-features = false }
+rand_pcg = "0.3.1"
+rand_xorshift = "0.3.0"
+instant = "0.1.12"
 
 [build-dependencies]
 flate2 = "1.0"
@@ -42,8 +48,13 @@ serde_json = "1.0"
 [dev-dependencies]
 test-case = "3.3"
 criterion = "0.5"
+flamegraph = "0.6"
 
 
 [[bench]]
 name = "text"
 harness = false
+
+
+[profile.release]
+debug = true
