--- a/fast_aug/Cargo.toml
+++ b/fast_aug/Cargo.toml
@@ -32,13 +32,16 @@ icu_provider = "1.4"
 serde = "1.0"
 serde_json = "1.0"
 flate2 = "1.0"
-candle-core = "0.3.2"
-half = "2.3"
-hf-hub = "0.3.0"
+#candle-core = "0.3.2"
+#half = "2.3"
+#hf-hub = "0.3.0"
 #tokenizers = { version = "0.13.4", default-features = false }
-rand_pcg = "0.3.1"
-rand_xorshift = "0.3.0"
-instant = "0.1.12"
+criterion = "0.5"
+
+
+finl_unicode = "1.2.0"
+icu_segmenter = "1.4.0"
+
 
 [build-dependencies]
 flate2 = "1.0"
@@ -48,13 +51,21 @@ serde_json = "1.0"
 [dev-dependencies]
 test-case = "3.3"
 criterion = "0.5"
-flamegraph = "0.6"
+#flamegraph = "0.6"
+pprof = { version = "0.13", features = ["flamegraph", "criterion"] }
 
 
 [[bench]]
 name = "text"
 harness = false
 
+[[bench]]
+name = "flow"
+harness = false
+
 
 [profile.release]
+debug = true
+
+[profile.bench]
 debug = true
