ci: fix job names

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,7 +49,7 @@ jobs:
         with:
           path: ~/.cargo
           key: ${{ runner.os }}-rust-${{ hashFiles('**/Cargo.toml') }}
-      - name: Run tests in ${{ matrix.debug }} mode
+      - name: Run tests in debug=${{ matrix.debug }} mode
         working-directory: ${{ env.RUST_SRC_DIRECTORY }}
         run: |
           if ${{ matrix.debug }}; then
@@ -148,7 +148,7 @@ jobs:
         with:
           path: ~/.cargo
           key: ${{ runner.os }}-rust-${{ hashFiles('**/Cargo.toml') }}
-      - name: Run tests in ${{ matrix.debug }} mode
+      - name: Run rust tests in debug=${{ matrix.debug }} mode
         working-directory: ${{ env.PYTHON_SRC_DIRECTORY }}
         run: |
           if ${{ matrix.debug }}; then
@@ -160,7 +160,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           cache: 'pip'
-      - name: Install dependencies
+      - name: Install package in debug=${{ matrix.debug }} mode
         working-directory: ${{ env.PYTHON_SRC_DIRECTORY }}
         run: |
           if ${{ matrix.debug }}; then
@@ -172,7 +172,7 @@ jobs:
         working-directory: ${{ env.PYTHON_SRC_DIRECTORY }}
         run: |
           python generate_stubs.py --check
-      - name: Run tests
+      - name: Run python tests
         working-directory: ${{ env.PYTHON_SRC_DIRECTORY }}
         run: |
           pytest ${{ env.PYTHON_SRC_DIRECTORY }}
