--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.tar filter=lfs diff=lfs merge=lfs -text
 *.gz filter=lfs diff=lfs merge=lfs -text
 fast_aug/test_data filter=lfs diff=lfs merge=lfs -text
+test_data filter=lfs diff=lfs merge=lfs -text
