--- a/bindings/python/pyproject.toml
+++ b/bindings/python/pyproject.toml
@@ -38,12 +38,15 @@ test = [
     "black ==23.12.1",
     "mypy >=1.0.0",
     "ruff ==0.1.7",
-    "maturin >=1.0,<2.0"
+    "maturin >=1.0,<2.0",
+    "py-spy >=0.3.14,<1.0.0",
+    "pytest-benchmark[histogram] >=4.0.0,<5.0.0",
 ]
 
 [tool.pytest.ini_options]
 minversion = "6.0"
 testpaths = "tests"
+python_files = "test_*.py bench_*.py"
 
 [tool.ruff]
 target-version = "py312"
