--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -95,6 +95,8 @@ jobs:
         with:
           python-version: '3.12'
           cache: 'pip'
+      - name: Update pip
+        run: python -m pip install --upgrade pip
       - name: Make bindings/python/.venv/bin/python softlink to global python
         run: |
           mkdir -p bindings/python/.venv/bin
@@ -127,6 +129,8 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           cache: 'pip'
+      - name: Update pip
+        run: python -m pip install --upgrade pip
       - name: Make bindings/python/.venv/bin/python softlink to global python
         run: |
           mkdir -p bindings/python/.venv/bin
@@ -154,6 +158,8 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           cache: 'pip'
+      - name: Update pip
+        run: python -m pip install --upgrade pip
       - name: Make bindings/python/.venv/bin/python softlink to global python
         run: |
           mkdir -p bindings/python/.venv/bin
