--- a/.github/workflows/test-python.yml
+++ b/.github/workflows/test-python.yml
@@ -1,4 +1,4 @@
-name: Test
+name: Test Python bindings
 
 on:
   push:
@@ -9,77 +9,9 @@ on:
 
 env:
   RUST_BACKTRACE: full
-  RUST_SRC_DIRECTORY: ./fast_aug
-  PYTHON_SRC_DIRECTORY: ./bindings/python
 
 
 jobs:
-  lint-rust:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Install rust stable
-        uses: dtolnay/rust-toolchain@stable
-      - name: Cache rust
-        uses: Swatinem/rust-cache@v2
-        with:
-          path: ~/.cargo
-          key: ${{ runner.os }}-rust-${{ hashFiles('**/Cargo.toml') }}
-      - name: Run linters
-        run: make lint-rust
-
-  test-rust:
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest]
-#        os: [ubuntu-latest, macos-latest, windows-latest]
-        debug: [true, false]  # test with a debug build as it picks up errors which optimised release builds do not
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v4
-      - name: Install rust stable
-        uses: dtolnay/rust-toolchain@stable
-      - name: Cache rust
-        uses: Swatinem/rust-cache@v2
-        with:
-          path: ~/.cargo
-          key: ${{ runner.os }}-rust-${{ hashFiles('**/Cargo.toml') }}
-      - name: Run tests in debug=${{ matrix.debug }} mode
-        run: |
-          if ${{ matrix.debug }}; then
-            make test-rust BUILD_PROFILE=dev
-          else
-            make test-rust BUILD_PROFILE=release
-          fi
-
-  profile-rust:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Install rust stable
-        uses: dtolnay/rust-toolchain@stable
-      - name: Cache rust
-        uses: Swatinem/rust-cache@v2
-        with:
-          path: ~/.cargo
-          key: ${{ runner.os }}-rust-${{ hashFiles('**/Cargo.toml') }}
-      - name: Run profiling in release mode
-        run: make profile-rust
-      - name: Upload profiling results
-        uses: actions/upload-artifact@v4
-        with:
-          name: rust-profiling-results
-          path: |
-            # build timings 
-            fast_aug/target/cargo-timings/cargo-timing.html
-            # benchmarking results
-            fast_aug/target/criterion
-            # flamegraph
-            fast_aug/*.svg
-          if-no-files-found: error
-
-
   lint-python:
     runs-on: ubuntu-latest
     steps:
@@ -164,6 +96,10 @@ jobs:
         run: |
           mkdir -p bindings/python/.venv/bin
           ln -s $(which python) bindings/python/.venv/bin/python
+      - name: Install pref
+        run: |
+          sudo apt-get update
+          sudo apt-get install linux-tools-common linux-tools-generic linux-tools-`uname -r`
       - name: Run profiling in release mode
         run: make profile-python
       - name: Upload profiling results
