--- a/.github/workflows/test-rust.yml
+++ b/.github/workflows/test-rust.yml
@@ -67,7 +67,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install linux-tools-common linux-tools-generic linux-tools-`uname -r`
       - name: Run profiling in release mode
-        run: make profile-rust
+        run: sudo make profile-rust
       - name: Upload profiling results
         uses: actions/upload-artifact@v4
         with:
