--- a/.github/workflows/test-python.yml
+++ b/.github/workflows/test-python.yml
@@ -76,7 +76,8 @@ jobs:
           fi
 
   profile-python:
-    runs-on: ubuntu-latest
+#    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
       - name: Install rust stable
@@ -96,25 +97,25 @@ jobs:
         run: |
           mkdir -p bindings/python/.venv/bin
           ln -s $(which python) bindings/python/.venv/bin/python
-      - name: Install pref
-        run: |
-          sudo apt-get update
-          sudo apt-get install linux-tools-common linux-tools-generic linux-tools-`uname -r`
+#      - name: Install pref
+#        run: |
+#          sudo apt-get update
+#          sudo apt-get install linux-tools-common linux-tools-generic linux-tools-`uname -r`
 
-      - name: Check Kernel Version
-        run: uname -a
-      - name: Verify perf Installation
-        run: perf --version
-      - name: Test perf
-        run: sudo perf list
-      - name: Simple perf Test
-        run: sudo perf stat ls
-      - name: Check Virtualization
-        run: |
-          grep -cw vmx /proc/cpuinfo || echo "No VMX support. Might be running in a VM without virtualization extensions."
+#      - name: Check Kernel Version
+#        run: uname -a
+#      - name: Verify perf Installation
+#        run: perf --version
+#      - name: Test perf
+#        run: sudo perf list
+#      - name: Simple perf Test
+#        run: sudo perf stat ls
+#      - name: Check Virtualization
+#        run: |
+#          grep -cw vmx /proc/cpuinfo || echo "No VMX support. Might be running in a VM without virtualization extensions."
 
       - name: Run profiling in release mode
-        run: sudo make profile-python
+        run: make profile-python
       - name: Upload profiling results
         uses: actions/upload-artifact@v4
         with:
