--- a/.github/workflows/test-python.yml
+++ b/.github/workflows/test-python.yml
@@ -115,7 +115,7 @@ jobs:
 #          grep -cw vmx /proc/cpuinfo || echo "No VMX support. Might be running in a VM without virtualization extensions."
 
       - name: Run profiling in release mode
-        run: make profile-python
+        run: sudo make profile-python
       - name: Upload profiling results
         uses: actions/upload-artifact@v4
         with:
