--- a/bindings/python/pyproject.toml
+++ b/bindings/python/pyproject.toml
@@ -38,10 +38,12 @@ test = [
     "black ==23.12.1",
     "mypy >=1.0.0",
     "ruff ==0.1.7",
+    "isort >=5.0.0,<6.0.0",
     "maturin >=1.0,<2.0",
     "py-spy >=0.3.14,<1.0.0",
     "pytest-benchmark[histogram] >=4.0.0,<5.0.0",
 ]
+
 
 [tool.pytest.ini_options]
 minversion = "6.0"
@@ -56,6 +58,11 @@ target-version = "py312"
 extend-select = ["E", "F", "Q", "RUF100", "C90", "I"]
 ignore = []
 isort = { known-first-party = ['fast_aug', 'tests'] }
+line-length = 120
+
+[tool.black]
+line-length = 120
+target-version = ["py312"]
 
 [tool.mypy]
 no_incremental = true
@@ -70,6 +77,7 @@ warn_unused_ignores = true
 warn_unreachable = true
 allow_untyped_decorators = true
 exclude = [
+    "fast_aug/",  # enable when return type annotation will be added
     "tests/",
     ".tmp/",
     ".venv/"
