ci: try to use PYTHON_INTERPRETER=python

--- a/.github/workflows/test-python.yml
+++ b/.github/workflows/test-python.yml
@@ -29,9 +29,9 @@ jobs:
       - name: Update pip
         run: python -m pip install --upgrade pip
       - name: Build and install package
-        run: make build-python-dev PYTHON_INTERPRETER=$(which python)
+        run: make build-python-dev PYTHON_INTERPRETER=python
       - name: Run linters
-        run: make lint-python PYTHON_INTERPRETER=$(which python)
+        run: make lint-python PYTHON_INTERPRETER=python
 
   test-python:
     strategy:
@@ -60,9 +60,9 @@ jobs:
       - name: Run rust tests in debug=${{ matrix.debug }} mode
         run: |
           if ${{ matrix.debug }}; then
-            make test-python BUILD_PROFILE=dev PYTHON_INTERPRETER=$(which python)
+            make test-python BUILD_PROFILE=dev PYTHON_INTERPRETER=python
           else
-            make test-python BUILD_PROFILE=release PYTHON_INTERPRETER=$(which python)
+            make test-python BUILD_PROFILE=release PYTHON_INTERPRETER=python
           fi
 
   profile-python:
@@ -82,7 +82,7 @@ jobs:
       - name: Update pip
         run: python -m pip install --upgrade pip
       - name: Run profiling in release mode
-        run: sudo make profile-python PYTHON_INTERPRETER=$(which python)
+        run: sudo make profile-python PYTHON_INTERPRETER=python
       - name: Upload profiling results
         uses: actions/upload-artifact@v4
         with:
@@ -109,7 +109,7 @@ jobs:
       - name: Update pip
         run: python -m pip install --upgrade pip
       - name: Run comparison
-        run: make compare-python PYTHON_INTERPRETER=$(which python)
+        run: make compare-python PYTHON_INTERPRETER=python
       - name: Upload comparison results
         uses: actions/upload-artifact@v4
         with:
