--- a/bindings/python/pyproject.toml
+++ b/bindings/python/pyproject.toml
@@ -41,9 +41,10 @@ test = [
     "isort >=5.0.0,<6.0.0",
     "maturin >=1.0,<2.0",
     "pytest-benchmark[histogram] >=4.0.0,<5.0.0",
-    "jupyterlab >=4.0.0,<5.0.0",
 ]
 compare = [
+    "pytest >=6.0.0,<8.0.0",
+    "pytest-benchmark[histogram] >=4.0.0,<5.0.0",
     "pandas >=2.0.0,<3.0.0",
     "Pyarrow >=15.0.0,<16.0.0",  # for pandas
     "seaborn >=0.10.0,<1.0.0",
