--- a/.github/workflows/test-python.yml
+++ b/.github/workflows/test-python.yml
@@ -108,13 +108,5 @@ jobs:
           cache: 'pip'
       - name: Update pip
         run: python -m pip install --upgrade pip
-      - name: Run comparison
-        run: make compare-python PYTHON_INTERPRETER=python
-      - name: Upload comparison results
-        uses: actions/upload-artifact@v4
-        with:
-          name: python-comparison-results
-          path: |
-            # comparison results
-            bindings/python/*.svg
-          if-no-files-found: error
+      - name: Run comparison (just to check that it works)
+        run: make compare-python PYTHON_INTERPRETER=python COMPARE_REPETITIONS=1
