--- a/fast_aug/Cargo.toml
+++ b/fast_aug/Cargo.toml
@@ -31,9 +31,10 @@ icu_provider = "1.4"
 serde = "1.0"
 serde_json = "1.0"
 #flate2 = "1.0"
-candle-core = "0.3.2"
-#half = "2.3"
-#hf-hub = "0.3.0"
+#candle-core = "0.3.2"
+#hf-hub = "0.3.2"
+#clap = { version = "4.4.18", features = ["derive"] }
+#anyhow = "1.0.79"
 #tokenizers = { version = "0.13.4", default-features = false }
 
 
@@ -45,8 +46,7 @@ serde_json = "1.0"
 [dev-dependencies]
 test-case = "3.3"
 criterion = "0.5"
-#flamegraph = "0.6"
-pprof = { version = "0.13", features = ["flamegraph", "criterion"] }
+flamegraph = "0.6"
 
 
 [[bench]]
