--- a/.github/workflows/test-rust.yml
+++ b/.github/workflows/test-rust.yml
@@ -11,6 +11,11 @@ env:
   RUST_BACKTRACE: full
 
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref_name }}
+  cancel-in-progress: true
+
+
 jobs:
   lint-rust:
     runs-on: ubuntu-latest
@@ -29,12 +34,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest]
-#        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
         debug: [true, false]  # test with a debug build as it picks up errors which optimised release builds do not
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
+        with:
+          lfs: false
       - name: Install rust stable
         uses: dtolnay/rust-toolchain@stable
       - name: Cache rust
@@ -42,6 +48,7 @@ jobs:
         with:
           key: ${{ runner.os }}-rust-${{ hashFiles('**/Cargo.toml') }}
       - name: Run tests in debug=${{ matrix.debug }} mode
+        shell: bash
         run: |
           if ${{ matrix.debug }}; then
             make test-rust BUILD_PROFILE=dev
@@ -49,10 +56,12 @@ jobs:
             make test-rust BUILD_PROFILE=release
           fi
 
-  profile-rust:
+  test-profile-rust:
     runs-on: macos-latest  # not working on linux, kernel virtualization blocked
     steps:
       - uses: actions/checkout@v4
+        with:
+          lfs: false
       - name: Install rust stable
         uses: dtolnay/rust-toolchain@stable
       - name: Cache rust
