--- a/bindings/python/pyproject.toml
+++ b/bindings/python/pyproject.toml
@@ -13,14 +13,12 @@ features = ["pyo3/extension-module"]
 # pyproject.toml takes precedence over Cargo.toml
 [project]
 name = "fast-aug"
-#version =
-#authors =
 description = "Fast nlp augmentation library with rust backend"
-#readme = "README.md"
 requires-python = ">=3.8"
 classifiers = [
     "Programming Language :: Python :: 3",
-    "Development Status :: 2 - Pre-Alpha",
+    "Development Status :: 3 - Alpha",
+    "Programming Language :: Rust",
 ]
 dynamic = [
     'license',
