--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,7 +32,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: pypi
-      url: https://pypi.org/p/codebleu
+      url: https://pypi.org/p/fast_aug
     permissions:
       id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
     steps:
